# TrackDelay

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.py  api_muenster.py  pyproject.toml  requirements.txt  test_flask.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pull-on-remote.yml.disabled
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
old_files/: api_duesseldorf.py  api_muenster.py
public/: create_tables.sql  web.py
public/static/: styles.css
public/templates/: db_error.html  index.html
src/: api.py  api_duesseldorf.py  api_wrapper.py  main.py  train_data.py  train_delay_tracker.py  web.py
src/db/: schema.sql
src/train_delay/: __init__.py  auth_data.py  train_delay_tracker.py
src/traindelay/: __init__.py  train_delay_tracker.py
tests/: __init__.py  test_traindelay.py
